[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="btnPlay" type="Button" parent="."]
margin_left = 376.0
margin_top = 225.0
margin_right = 639.0
margin_bottom = 299.0
text = "Save&Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnExit" type="Button" parent="."]
margin_left = 377.0
margin_top = 321.0
margin_right = 640.0
margin_bottom = 395.0
text = "Exit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblautosave" type="Label" parent="."]
margin_left = 377.26
margin_top = 170.321
margin_right = 532.26
margin_bottom = 184.321
text = "Auto Save in Minutes : 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hs_autosave" type="HSlider" parent="."]
margin_left = 376.0
margin_top = 193.0
margin_right = 637.0
margin_bottom = 209.0
min_value = 1.0
max_value = 60.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="btnPlay" to="." method="_on_btnPlay_pressed"]
[connection signal="value_changed" from="hs_autosave" to="." method="_on_hs_autosave_value_changed"]
